kubernetes/elasticsearch.deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: elasticsearch

spec:
  selector:
    matchLabels:
      app: elasticsearch

  # Pod defenition
  template:
    metadata:
      labels:
        app: elasticsearch

    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.11.2
          
          ports:
            - containerPort: 9200
            - containerPort: 9300

---

apiVersion: v1
kind: Service

metadata:
  name: elasticsearch-service

spec:
  selector:
    app: elasticsearch
  
  ports:
    - protocol: TCP
      name: rest
      port: 9200
      targetPort: 9200

    - protocol: TCP
      name: inter-node
      port: 9300
      targetPort: 9300

  type: LoadBalancer
