kubernetes/kibana.deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kibana

spec:
  selector:
    matchLabels:
      app: kibana

  # Pod defenition
  template:
    metadata:
      labels:
        app: kibana

    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.11.2
            
          ports:
            - containerPort: 5601
---

# External service of redis deployment
apiVersion: v1
kind: Service

metadata:
  name: kibana-service

spec:
  selector:
    app: kibana
  
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601

  type: LoadBalancer
