kubernetes/rabbitmq.deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rabbitmq

spec:
  selector:
    matchLabels:
      app: rabbitmq

  # Pod defenition
  template:
    metadata:
      labels:
        app: rabbitmq

    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:management

          ports:
            - containerPort: 15672

          # Example of 'ConfigMap/Secret' files env declaration
---

# External service of rabbitmq deployment
apiVersion: v1
kind: Service

metadata:
  name: rabbitmq-service

spec:
  selector:
    app: rabbitmq
  
  ports:
    - protocol: TCP
      name: admin
      port: 15672
      targetPort: 15672

    - protocol: TCP
      name: access-port
      port: 5672
      targetPort: 5672

  type: LoadBalancer
