kubernetes/redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis

spec:
  selector:
    matchLabels:
      app: redis

  # Pod defenition
  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
        - name: redis
          image: redis
          
          command:
            - redis-server
            
          ports:
            - containerPort: 6379

# Yaml file seperator
---

# External service of redis deployment
apiVersion: v1
kind: Service

metadata:
  name: redis-service

spec:
  selector:
    app: redis
  
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379

  type: NodePort
