kubernetes/socket-handler.deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: socket-handler
  labels:
    app: socket-handler

spec:
  replicas: 3
  selector:
    matchLabels:
      app: socket-handler
  
  # Pod defenition
  template:
    metadata:
      labels:
        app: socket-handler

    spec: 
      containers:
        - name: socket-handler
          image: socket-handler
          imagePullPolicy: Never # Remove this in production (local-image pull)
          
          # Example of 'in-deployment' env declaration
          ports:
            - containerPort: 3000 # Port to expose inside the container

# Yaml file seperator
---

# External service of socket-handler deployment
apiVersion: v1
kind: Service

metadata:
  name: socket-handler-service

spec:
  selector:
    app: socket-handler

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: LoadBalancer
