kubernetes/socket-handler.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-handler-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: socket-handler-service
              port:
                number: 3000
        # - path: /banana
        #   pathType: Prefix
        #   backend:
        #     service:
        #       name: banana-service
        #       port:
        #         number: 5678
